--- a/part-3/app/views/layout.erb
+++ b/part-3/app/views/layout.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -15,9 +19,31 @@
   <script src="/js/jquery.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>Yallp</title>
 </head>
 <body>
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Yallp</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="/"></a></li>
+      <li><a href="/restaurants/new"></a>Add Restaurant</li>
+    </ul>
+    <% if logged_in? %>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/users/<%= current_user.id %>"><span class="glyphicon glyphicon-user"></span> <%= current_user.username %></a></li>
+      <li><a><span class="glyphicon glyphicon-log-out"></span> <form action="/logout" method="post"><input type="hidden" name="_method" value="delete"><input type="submit" value="Logout"></form></a></li>
+    </ul>
+    <% else %>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/users/new"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+    <% end %>
+  </div>
+  </nav>
   <%= yield %>
 </body>
 </html>
