Finish logout route

--- a/part-3/app/views/layout.erb
+++ b/part-3/app/views/layout.erb
@@ -29,12 +29,12 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="/"></a></li>
-      <li><a href="/restaurants/new"></a>Add Restaurant</li>
+      <li><a href="/restaurants/new">Add Restaurant</a></li>
     </ul>
     <% if logged_in? %>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/users/<%= current_user.id %>"><span class="glyphicon glyphicon-user"></span> <%= current_user.username %></a></li>
-      <li><a><span class="glyphicon glyphicon-log-out"></span> <form action="/logout" method="post"><input type="hidden" name="_method" value="delete"><input type="submit" value="Logout"></form></a></li>
+      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
     </ul>
     <% else %>
     <ul class="nav navbar-nav navbar-right">
