--- a/part-3/app/views/layout.erb
+++ b/part-3/app/views/layout.erb
@@ -29,7 +29,9 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="/"></a></li>
-      <li><a href="/restaurants/new">Add Restaurant</a></li>
+      <% if logged_in? %>
+        <li><a href="/restaurants/new">Add Restaurant</a></li>
+      <% end %>
     </ul>
     <% if logged_in? %>
     <ul class="nav navbar-nav navbar-right">
