Add new restaurant routes, views and logic

--- a/part-3/app/views/restaurants/new.erb
+++ b/part-3/app/views/restaurants/new.erb
@@ -1,1 +1,21 @@
 <h2>Enter Restaurant Details</h2>
+
+<% if @restaurant.errors.any? %>
+<%= erb :"_errors", locals: {errors: @restaurant.errors} %>
+<% end %>
+
+<form method="POST" action="/restaurants">
+  <input type="text" name="restaurant[name]" placeholder="Name" value="<%= @restaurant.name %>">
+
+  <input type="text" name="restaurant[cuisine]" placeholder="Cuisine" value="<%= @restaurant.cuisine %>"><br>
+
+  <input type="text" name="restaurant[address]" placeholder="Street address" value="<%= @restaurant.address %>"><br>
+
+  <input type="text" name="restaurant[city]" placeholder="City" value="<%= @restaurant.city %>">
+
+  <input type="text" name="restaurant[state]" placeholder="State" value="<%= @restaurant.state %>">
+
+  <input type="text" name="restaurant[zip]" placeholder="Zip" value="<%= @restaurant.zip %>"><br>
+
+  <input type="submit" value="Add restaurant">
+</form>
