Restrict user access and add unauthorized user view

--- a/part-3/app/views/restaurants/_restaurant.erb
+++ b/part-3/app/views/restaurants/_restaurant.erb
@@ -2,7 +2,7 @@
   <a href="/restaurants/<%= restaurant.id %>"><%= restaurant.name %></a><br>
   <%= restaurant.short_address %>
   <% if logged_in? && current_user.id == restaurant.owner_id.to_i %><br>
-    <a href="/restaurants/<%= restaurant.id %>">Edit</a><br>
+    <a href="/restaurants/<%= restaurant.id %>/edit">Edit</a><br>
     <form method="POST" action="/restaurants/<%= restaurant.id %>">
       <input type="hidden" name="_method" value="DELETE">
       <input type="submit" value="Delete">
