Add shitty styling

--- a/part-3/app/views/restaurants/index.erb
+++ b/part-3/app/views/restaurants/index.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="restaurants">
   <% @restaurants.each do |restaurant| %>
     <%= erb :"restaurants/_restaurant", layout: false, locals: {restaurant: restaurant} %><br>
   <% end %>
