--- a/part-3/app/views/reviews/_form.erb
+++ b/part-3/app/views/reviews/_form.erb
@@ -11,5 +11,5 @@
     <option value=1>1</option>
   </select><br>
   <input type="textarea" name="review[content]" placeholder="Your review here" value="<%= review.content %>"><br>
-  <input type="submit" value="Add review">
+  <input type="submit" class="btn btn-default" value="Add review">
 </form>
