--- a/part-3/app/views/restaurants/edit.erb
+++ b/part-3/app/views/restaurants/edit.erb
@@ -7,6 +7,6 @@
 <form method="POST" action="/restaurants/<%= @restaurant.id %>">
   <input type="hidden" name="_method" value="PUT">
   <%= erb :"restaurants/_form", locals: {restaurant: @restaurant} %>
-  <input type="submit" value="Update restaurant">
+  <input type="submit" class="btn btn-info" value="Update restaurant">
 </form>
 
