--- a/part-3/app/views/restaurants/new.erb
+++ b/part-3/app/views/restaurants/new.erb
@@ -6,5 +6,5 @@
 
 <form method="POST" action="/restaurants">
   <%= erb :"restaurants/_form", locals: {restaurant: @restaurant} %>
-  <input type="submit" value="Add restaurant">
+  <input type="submit" class="btn btn-default" value="Add restaurant">
 </form>
