--- a/part-3/app/views/session/new.erb
+++ b/part-3/app/views/session/new.erb
@@ -1,11 +1,11 @@
-<h2>Login</h2>
+<h2 class="login">Login</h2>
 
 <% if @message %>
 <p><%= @message %></p>
 <% end %>
 
-<form method="POST" action="/login">
+<form class="login" method="POST" action="/login">
   <input type="text" name="username" placeholder="Username"><br>
   <input type="password" name="password" placeholder="Password"><br>
-  <input type="submit">
+  <input type="submit" class="btn btn-default">
 </form>
