--- a/part-3/public/css/application.css
+++ b/part-3/public/css/application.css
@@ -17,10 +17,14 @@ ul.restaurants {
 .restaurants li {
   border: 2px solid black;
   width: 200px;
-  height: 100px;
+  height: 120px;
   padding-top: 20px;
   margin: 50px;
   float: left;
   display: inline;
   text-align: center;
+}
+
+li .btn {
+  margin: 0;
 }
